seshat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-update-check-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: db-update-check
  template:
    metadata:
      labels:
        app: db-update-check
    spec:
      imagePullSecrets:
        - name: seshatsecret
      containers:
        - name: db-update-check-container
          image: dbupdatecheckservice-db-update-check-service
          # imagePullPolicy: Always
          ports:
#             - containerPort: 8001
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: db-update-check-service
# spec:
#   selector:
#     app: db-update-check
#   ports:
#     - protocol: TCP
#       port: 8001
#       targetPort: 8001
#   type: NodePort
