user_activity_github_service_deployment.yaml

apiVersion: v1
kind: Service
metadata:
  name: user-activity-github-service
spec:
  selector:
    app: user-activity-github-service
  ports:
  - name: http
    protocol: "TCP"
    port: 8001 #Port which kubernetes service runs on
    targetPort: 8001
  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-activity-github-service
spec:
  selector:
    matchLabels:
      app: user-activity-github-service
  replicas: 1
  template:
    metadata:
      labels:
        app: user-activity-github-service
    spec:
      imagePullSecrets:
        - name: developeriqsecret
      containers:
      - name: user-activity-github-service
        image: 227376926882.dkr.ecr.eu-north-1.amazonaws.com/cloudcomputingcw:latest
        command: ["python3","user_activity_github_service.py"]
        imagePullPolicy: Always
        ports:
        - containerPort: 8001
